--- a/public/wp-content/themes/aokranj/style.scss
+++ b/public/wp-content/themes/aokranj/style.scss
@@ -162,7 +162,6 @@ body {
   }
 }
 
-
 // menu
 .navbar {
   background: #1d1d1e;
@@ -173,9 +172,11 @@ body {
       background-image: url('images/aokranj-logo.png');
       background-repeat: no-repeat;
       background-position: center center;
-      h1 {
+
+      h1.site-title {
         a {
           opacity: 0;
+          text-indent: -9999px;
         }
       }
 
@@ -269,6 +270,13 @@ body {
   &.btn-info    { background-color: $brand-info;    border-color: $brand-info;    }
   &.btn-warning { background-color: $brand-warning; border-color: $brand-warning; }
   &.btn-danger  { background-color: $brand-danger;  border-color: $brand-danger;  }
+  &:hover {
+    &.btn-primary { background-color: darken($brand-primary, 10%); border-color: darken($brand-primary, 10%); }
+    &.btn-success { background-color: darken($brand-success, 10%); border-color: darken($brand-success, 10%); }
+    &.btn-info    { background-color: darken($brand-info, 10%);    border-color: darken($brand-info, 10%);    }
+    &.btn-warning { background-color: darken($brand-warning, 10%); border-color: darken($brand-warning, 10%); }
+    &.btn-danger  { background-color: darken($brand-danger, 10%);  border-color: darken($brand-danger, 10%);  }
+  }
 
   // bootstrap outline button
   &.btn-outline {
@@ -313,54 +321,139 @@ h1, h2, h3, h4, h5, h6 {
 .carousel {
   box-shadow: 0 0 3px #ccc;
 
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+
   .carousel-caption {
-    position: absolute;
-    top: 20%;
-    padding: 0;
+    display: block;
+    position: relative;
+    top: auto;
+    left: auto;
+    right: auto;
+    bottom: auto;
+    margin: 0 auto;
+    padding: 15px;
+    width: 80%;
+    max-width: 960px;
+    background: rgba(0, 0, 0, 0.6);
 
-    @media (width: 640px) and (orientation: landscape){
-      top: 10%;
-    }
-
-    @media (min-width: 768px) {
-      top: 20%;
+    p {
+      margin: 0;
     }
 
     .slide-title {
-      margin-bottom: 0;
-      padding: 10px;
-      background: rgba(0, 0, 0, 0.6);
+      margin: 0;
+      padding: 0 0 15px 0;
+
+      font-size: 4vw !important;
+      line-height: 4vw;
+
+      font-size: 18px !important;
+      line-height: 22px;
+
       font-weight: 700;
       font-family: 'Geogrotesque';
     }
 
     .excerpt {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 0 10px 15px 10px;
-      margin-bottom: 10px;
-      font-size: 2vw;
-      line-height: 4vw;
+      margin: 0;
+      padding: 0 0 15px 0;
+
+      font-size: 3.4vw;
+      line-height: 3.6vw;
+
+      font-size: 13px;
+      line-height: 16px;
+
       font-weight: 400;
       font-family: 'Geogrotesque';
-      p {
-        margin: 0;
-      }
-      @media (min-width: 768px) {
-        margin-bottom: 20px;
-      }
-      /*
-      @media (min-width: 680px) and (max-width: 768px) {
-        font-size: 2.4vw;
-        line-height: 4vw;
-      }
-      */
     }
 
     .call-to-action {
-      margin-top: 10px;
-      @media (min-width: 768px) {
-        margin-bottom: 20px;
+      margin: 0;
+      p {
+        margin: 0 !important;
       }
+    }
+
+    @media (min-width: 480px) {
+      .slide-title {
+        font-size: 3.6vw !important;
+        line-height: 3.6vw;
+
+        font-size: 22px !important;
+        line-height: 26px;
+      }
+      .excerpt {
+        font-size: 14px;
+        line-height: 16px;
+      }
+    }
+
+    @media (min-width: 568px) {
+      .slide-title {
+        font-size: 3.4vw !important;
+        line-height: 3.4vw;
+
+        font-size: 22px !important;
+        line-height: 26px;
+      }
+      .excerpt {
+        font-size: 3vw;
+        line-height: 3.2vw;
+
+        font-size: 16px;
+        line-height: 18px;
+      }
+    }
+
+    @media (min-width: 768px) {
+      padding: 20px;
+      .slide-title {
+        padding-bottom: 20px;
+        font-size: 3.4vw !important;
+        line-height: 3.4vw;
+
+        font-size: 24px !important;
+        line-height: 28px;
+
+      }
+      .excerpt {
+        padding-bottom: 22px;
+        font-size: 2.6vw;
+        line-height: 2.8vw;
+
+        font-size: 18px;
+        line-height: 20px;
+      }
+    }
+
+    @media (min-width: 992px) {
+      padding: 30px;
+      .slide-title {
+        padding-bottom: 30px;
+        font-size: 3vw !important;
+        line-height: 3vw;
+
+        font-size: 26px !important;
+        line-height: 30px;
+      }
+      .excerpt {
+        padding-bottom: 32px;
+        font-size: 2.4vw;
+        line-height: 2.6vw;
+
+        font-size: 20px;
+        line-height: 22px;
+      }
+    }
+
+    @media (min-width: 1200px) {
+      width: 84%;
     }
   }
 
