--- a/public/wp-content/themes/aokranj/style.scss
+++ b/public/wp-content/themes/aokranj/style.scss
@@ -173,7 +173,7 @@ body {
       background-repeat: no-repeat;
       background-position: center center;
 
-      h1.site-title {
+      .site-title {
         a {
           opacity: 0;
           text-indent: -9999px;
