--- a/public/wp-content/themes/aokranj/scss/posts.scss
+++ b/public/wp-content/themes/aokranj/scss/posts.scss
@@ -11,14 +11,15 @@
     border: 1px solid #d1d2d4 !important;
     font-family: 'Geogrotesque';
 
+
     .featured-image {
-      @media (min-width: 768px) {
+      //@media (min-width: 768px) {
         display: none;
-      }
+      //}
     }
 
     .item-title {
-      padding: 30px 30px 0 30px;
+      padding: 20px 20px 0 20px;
       font-family: 'Geogrotesque';
       a {
         color: $orange;
@@ -32,7 +33,7 @@
     }
 
     .author {
-      padding: 5px 30px 30px 30px;
+      padding: 5px 20px 20px 20px;
       font-size: 15px;
       font-family: 'Geogrotesque';
       color: $lightgray;
@@ -47,27 +48,62 @@
     .excerpt {
       font-family: 'Geogrotesque';
       font-size: 15px;
-      padding: 0 30px;
+      padding: 0 20px;
       margin: 0;
     }
 
     .gallery {
       display: none;
-      padding: 0 30px;
+      padding: 0 13px;
       text-align: left;
 
-      @media (min-width: 768px) {
+      //@media (min-width: 768px) {
         display: block;
+      //}
+      //
+
+      .gallery-caption {
+        border-radius: 0 0 3px 3px;
+      }
+
+      @media (max-width: 768px) {
+        .gallery-item {
+          width: calc(33.3333% - 14px) !important;
+          margin-left: 7px !important;
+          margin-right: 7px !important;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .gallery-item {
+          width: calc(50% - 14px) !important;
+          margin-left: 7px !important;
+          margin-right: 7px !important;
+        }
       }
     }
 
     .item-meta {
       border-top: none;
-      margin-top: 0;
+      margin-top: 15px;
       padding-top: 0;
       font-family: 'Geogrotesque';
       font-size: 15px;
     }
-  }
 
+    @media (min-width: 768px) {
+      .item-title {
+        padding: 30px 30px 0 30px;
+      }
+      .author {
+        padding: 5px 30px 30px 30px;
+      }
+      .excerpt {
+        padding: 0 30px;
+      }
+      .gallery {
+        padding: 0 30px;
+      }
+    }
+  }
 }
