--- a/public/wp-content/themes/franz-josef/responsive.css
+++ b/public/wp-content/themes/franz-josef/responsive.css
@@ -62,6 +62,9 @@
 		margin-bottom: 0;
 		bottom: 0;
 	}
+	.navbar-nav {
+		float: none;
+	}
 	.navbar-inverse .navbar-nav > li > a,
 	.navbar-inverse .navbar-nav > li > a.has-desc {
 		padding-top: 5px;
