--- a/public/wp-content/themes/aokranj/style.css
+++ b/public/wp-content/themes/aokranj/style.css
@@ -626,15 +626,12 @@ h1, h2, h3, h4, h5, h6 {
 .carousel {
   box-shadow: 0 0 3px #ccc; }
   .carousel .container {
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-align: center;
+        align-items: center;
+    -ms-flex-pack: center;
+        justify-content: center;
     height: 100%; }
   .carousel .carousel-caption {
     display: block;
@@ -931,6 +928,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
   font-weight: 400;
   font-family: 'Geogrotesque'; }
+
+.comment-respond {
+  margin-top: 0;
+  padding-top: 90px; }
 
 .bottom-bar .copyright {
   margin-top: 0; }
